objects/csfb__Conga_Solution_Query__c.object
<CustomObject>
    <fields>
        <fullName>csfb__Alias__c</fullName>
        <label>Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Comments__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csfb__Conga_Query_Name__c</fullName>
        <formula>csfb__Conga_Query__r.csfb__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Query Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Conga_Query__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conga Query</label>
        <referenceTo>csfb__Conga_Merge_Query__c</referenceTo>
        <relationshipLabel>Conga Solution Queries</relationshipLabel>
        <relationshipName>Conga_Solution_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csfb__Conga_Solution__c</fullName>
        <label>Conga Solution</label>
        <referenceTo>csfb__Conga_Solution__c</referenceTo>
        <relationshipLabel>Conga Solution Queries</relationshipLabel>
        <relationshipName>Conga_Solution_Queries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csfb__pv0__c</fullName>
        <inlineHelpText>Automatically populated according to the field selected. This value will be dynamically passed to the first filter of the query. Using a plus sign (+) specifies that a blank value should be used.</inlineHelpText>
        <label>pv0</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csfb__pv1__c</fullName>
        <inlineHelpText>Automatically populated according to the field selected. This value will be dynamically passed to the second filter of the query. Using a plus sign (+) specifies that a blank value should be used.</inlineHelpText>
        <label>pv1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csfb__pv2__c</fullName>
        <inlineHelpText>Automatically populated according to the field selected. This value will be dynamically passed to the third filter of the query. Using a plus sign (+) specifies that a blank value should be used.</inlineHelpText>
        <label>pv2</label>
        <type>TextArea</type>
    </fields>
    <label>Conga Solution Query</label>
    <nameField>
        <displayFormat>CSQ-{00000}</displayFormat>
        <label>Conga Solution Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>